NO-JIRA: [Broker-J] Migrate REST stress client to Java HTTP client
Replace HttpURLConnection with a reusable java.net.http.HttpClient while preserving Basic and CRAM-MD5 authentication, cookie handling, and TLS behavior.